--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,19 @@
 
 .App-header {
   background-color: #222;
-  height: 50px;
-  padding: 20px;
+  height: 150px;
+  padding: 15px;
+  padding-left: 30px;
   color: white;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
   font-weight: bold;
+}
+.App-header img {
+  width: 8em;
+  height: 8em;
+  border-radius: 1em;
 }
 
 .App-title {
