--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,13 @@ tr {
 }
 
 .footer {
-  padding-top: 20px;
+  padding: 20px;
   text-align: center;
+  background-color: black;
+  color: white;
+}
+.footer ul li {
+  list-style: none;
 }
 
 .card {
