Added state variable on Search component

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ tr {
 }
 
 .restaurant {
-  background-color: teal;
+  background-color: black;
   padding: 1em;
   margin: 1em auto;
   width: 15%;
