--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: grey;
+  background-color: #5b5757;
   height: 150px;
   padding: 15px;
   padding-left: 30px;
@@ -29,8 +29,10 @@
 }
 
 .App-content {
-  padding-top: 20px;
+  padding-top: 50px;
   font-size: large;
+  display: grid;
+  grid-template-columns: 2fr 7fr;
 }
 
 @keyframes App-logo-spin {
@@ -56,7 +58,7 @@ tr {
 .footer {
   padding: 20px;
   text-align: center;
-  background-color: grey;
+  background-color: #5b5757;
   color: white;
 }
 .footer ul li {
@@ -81,11 +83,12 @@ tr {
 }
 
 .restaurant {
-  background-color: grey;
+  background-color: #5b5757;
   padding: 1em;
-  margin: 1em auto 5em;
+  margin: 1em 35em 5em;
   width: 60.5%;
   color: white;
+  border-radius: 1em;
 }
 .restaurant ul li {
   margin-top: 10px;
@@ -113,8 +116,9 @@ table {
 }
 
 .customerProfile {
-  background-color: gray;
+  background-color: #5b5757;
   color: whitesmoke;
+  border-radius: 1em;
 }
 .customerProfile div {
   padding: 1em;
@@ -122,4 +126,18 @@ table {
 .customerName {
   font-weight: bold;
   font-size: 1.5em;
+}
+.createBooking {
+  margin-left: 1em;
+  background-color: #5b5757;
+  padding: 1em;
+  color: whitesmoke;
+  border-radius: 1em;
+}
+
+.createBooking h4 {
+  text-align: center;
+}
+.createBooking ul li {
+  list-style: none;
 }
