--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  /* animation: App-logo-spin infinite 20s linear; */
   height: 80px;
 }
 
@@ -25,7 +25,7 @@
   margin: auto;
   font-size: 2.5em;
   font-family: "Courier New", Courier, monospace;
-  text-shadow: 5px 0px 2px white;
+  /* text-shadow: 5px 0px 2px white; */
 }
 .App-header img {
   width: 8em;
@@ -190,11 +190,24 @@ h4 {
 .loading {
   position: absolute;
   top: 0;
-  width: 100vw;
+  left: 0;
+  width: 100%;
   height: 100vh;
   text-align: center;
-  background-color: white;
+  background-color: rgba(230, 218, 218, 0.5);
   padding: 5em;
   color: green;
   font-size: 2em;
+}
+.loading-image {
+  animation: loading-spin infinite 1s linear;
+  height: 80px;
+}
+@keyframes loading-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
